<resources>
    <string name="app_name">EazyTime</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_todo">待办</string>
    <string name="title_attendance">打卡</string>
    <string name="title_focus">专注</string>
    <string name="title_analyse">统计</string>
    <string name="touch_to_add_todo">点我添加待办</string>
    <string name="touch_to_add_attendance">点我添加打卡</string>
    <string name="ok">确定</string>
    <string name="add_todo">添加待办</string>
    <string name="add_attendance">添加打卡</string>
    <string name="todo_title">事项名称</string>
    <string name="attendance_title">打卡内容</string>
    <string name="delete">删除</string>
    <string name="touch_to_set_date">点击设定日期</string>
    <string name="touch_to_set_time">点击设定时间</string>
    <string name="priority">优先级</string>
    <string name="finished">已完成</string>
    <string name="need_remind">需要提醒</string>
    <string name="ten_min_before">提前10分钟</string>
    <string name="no_before">不提前</string>
    <string name="one_day_before">提前1天</string>
    <string name="custom">提前</string>
    <string name="hour">小时</string>
    <string name="remind_time">提醒时间</string>
    <string name="remind_per_day">每日提醒</string>
    <string name="remind_per_week">每周提醒</string>
    <string name="remind">提醒</string>>
    <string name="day">天</string>>
    <string name="per">每</string>>
    <string name="over">我要打卡</string>>
    <string name="finish">结束</string>
    <drawable name="button_nopress">#BC6201FF</drawable>
    <drawable name="button_pressed">#A40000</drawable>
</resources>