<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_todo"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_title" />
        <EditText
            android:id="@+id/todo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5">
            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="end"
            android:text="@string/priority" />
        <Spinner
            android:id="@+id/todo_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/priority"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <TextView
            android:id="@+id/dateText"
            android:text="@string/touch_to_set_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/timeText"
            android:text="@string/touch_to_set_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/need_remind_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/need_remind" />
    <LinearLayout
        android:id="@+id/remind_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/no_before_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_before" />
        <CheckBox
            android:id="@+id/ten_min_before_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_min_before" />
        <CheckBox
            android:id="@+id/one_day_before_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_day_before" />
        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom" />
        <EditText
            android:id="@+id/custom_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour" />

    </LinearLayout>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/ok" />

</LinearLayout>