<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_todo">

    <fragment
        android:id="@+id/navigation_todo"
        android:name="com.hitsz.eazytime.ui.todo.TodoFragment"
        android:label="@string/title_todo"
        tools:layout="@layout/fragment_todo" />

    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.hitsz.eazytime.ui.attendance.AttendanceFragment"
        android:label="@string/title_attendance"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/navigation_focus"
        android:name="com.hitsz.eazytime.ui.focus.FocusFragment"
        android:label="@string/title_focus"
        tools:layout="@layout/fragment_focus" />

    <fragment
        android:id="@+id/navigation_analyse"
        android:name="com.hitsz.eazytime.ui.analyse.AnalyseFragment"
        android:label="@string/title_analyse"
        tools:layout="@layout/fragment_analyse" />
</navigation>