<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item-->
<!--        android:id="@+id/navigation_home"-->
<!--        android:icon="@drawable/ic_home_black_24dp"-->
<!--        android:title="@string/title_home" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="@string/title_dashboard" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
<!--        android:title="@string/title_notifications" />-->

    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/ic_todo_black_24dp"
        android:title="@string/title_todo" />

    <item
        android:id="@+id/navigation_attendance"
        android:icon="@drawable/ic_attendance_black_24dp"
        android:title="@string/title_attendance" />

    <item
        android:id="@+id/navigation_focus"
        android:icon="@drawable/ic_focus_black_24dp"
        android:title="@string/title_focus" />

    <item
        android:id="@+id/navigation_analyse"
        android:icon="@drawable/ic_analyse_black_24dp"
        android:title="@string/title_analyse" />
</menu>